@@ -1,0 +1,53 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+
+package org.apache.cassandra.testing;
+
+import java.math.BigInteger;
+
+/**
+ * Represents types of Partitioners supported and the corresponding starting token values
+ */
+public enum Partitioner
+{
+    Murmur3(BigInteger.valueOf(Long.MIN_VALUE), BigInteger.valueOf(Long.MAX_VALUE)),
+    Random(BigInteger.ONE.negate(), BigInteger.valueOf(2).pow(127));
+
+    public final BigInteger minToken;
+    public final BigInteger maxToken;
+
+    Partitioner(BigInteger minToken, BigInteger maxToken)
+    {
+        this.minToken = minToken;
+        this.maxToken = maxToken;
+    }
+
+    public static Partitioner fromClassName(String className)
+    {
+        switch (className)
+        {
+            case "org.apache.cassandra.dht.Murmur3Partitioner":
+                return Murmur3;
+            case "org.apache.cassandra.dht.RandomPartitioner":
+                return Random;
+            default:
+                throw new UnsupportedOperationException("Unexpected partitioner: " + className);
+        }
+    }
+}
