@@ -1,4 +1,5 @@
 1.0.0
+ * Bump Sidecar version to 55a9efee (CASSANDRA-19774)
  * Add new module cassandra-analytics-common to store common code with minimal dependencies (CASSANDRA-19748)
  * Bulk writer fails validation stage when writing to a cluster using RandomPartitioner (CASSANDRA-19727)
  * Invalid mapping when timestamp is used as a partition key during bulk writes (CASSANDRA-19716)
